--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,11 @@
 [phases.setup]
-nixPkgs = [
-  "python312",
-  "cairo",
-  "pango",
-  "gdk-pixbuf",
-  "libffi",
-  "gobject-introspection",
-  "glib"
+aptPkgs = [
+  "libcairo2",
+  "libpango-1.0-0",
+  "libpangocairo-1.0-0",
+  "libgdk-pixbuf2.0-0",
+  "libffi-dev",
+  "shared-mime-info",
+  "libglib2.0-0",
+  "libgobject-2.0-0"
 ]
